@@ -5,6 +5,9 @@ Changes in trunk
   It works like ``add_description_unit`` but the directive will only
   create a target and no output.
 
+* sphinx.ext.autodoc: Don't check ``__module__`` for explicitly given
+  members.
+
 * sphinx.environment: Don't swallow TOC entries when resolving subtrees.
 
 * sphinx.directives: Allow giving a different title to documents
